--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "vue": "^2.6.14",
+    "vue-agile": "^2.0.0",
     "vue-responsive": "^1.3.1",
     "vue-router": "^3.5.1"
   },
