--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^2.6.14",
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
+    "vue": "^2.7.14",
     "vue-agile": "^2.0.0",
     "vue-responsive": "^1.3.1",
     "vue-router": "^3.5.1"
