--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
+    "hamburgers": "^1.2.1",
     "vue": "^2.7.14",
     "vue-agile": "^2.0.0",
     "vue-responsive": "^1.3.1",
